# boxer-packer

./: .gitignore  README.md
OutputApp/OutputApp/: AROutputViewController.swift  AppDelegate.swift  ChooseOutputViewController.swift  CollectionImageCell.swift  Info.plist  Pallets.swift
OutputApp/OutputApp.xcodeproj/: project.pbxproj
OutputApp/OutputApp.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
OutputApp/OutputApp/Base.lproj/: Main.storyboard
Packing/binpack/: CMakeLists.txt
Packing/binpack/binpack/: CMakeLists.txt  binpack.cpp  binpack.h  box.h  database_handler.h  example.json  http_client.h  http_handler.h  pallet.h
Packing/binpack/binpack/sample_data/: create_test_data.py  hard.json  testData.json
Visualization/: Podfile
Visualization/Visualization/: AppDelegate.swift  LayoutViewController.swift  MainMenuViewController.swift
Visualization/Visualization.xcodeproj/: project.pbxproj
Visualization/Visualization.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Visualization/Visualization.xcworkspace/: contents.xcworkspacedata
Visualization/Visualization/Base.lproj/: Main.storyboard
scanner/scanner-2/: Podfile
scanner/scanner-2/scanner-2/: AROutputViewController.swift  AppDelegate.swift  BoxCollectionViewCell.swift  ChooseOutputViewController.swift  CollectionImageCell.swift  Colors.swift  Constants.swift  HomeViewController.swift  Info.plist  LayoutViewController.swift  Pallets.swift  set0.json  (+6 more)
scanner/scanner-2/scanner-2.xcodeproj/: project.pbxproj
scanner/scanner-2/scanner-2.xcworkspace/: contents.xcworkspacedata
(+31 files in other folders)
